<resources>
    <string name="app_name">Safe chat</string>
    <string name="welcome_msg">Welcome!</string>
    <string name="sign_out">Sign Out</string>
    <string name="contacts_permission_rationale">Access to account information is required to sign in.</string>
    <string name="invite_menu_label">Invite</string>
    <string name="invitation_message">Please join me for a Safe Chat</string>
    <string name="invitation_cta">Call to action</string>
    <string name="invitation_title">SafeChat Invite</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="fresh_config">Fresh Config</string>
    <string name="cause_crash">Cause Crash</string>
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="add_chat">Add chat</string>
    <string name="chat_name">Chat name</string>
    <string name="create_chat">Create chat</string>
    <string name="no_messages">No messages</string>
    <string name="no_chats">No available dialogs</string>
    <string name="notification_message">You have a new message in %s</string>
    <string name="message_count">%s messages</string>
    <string name="last_message_from">The last message from: %s</string>
    <string name="menu_title">Safe chat</string>
    <string name="public_chats">Public chats</string>
    <string name="private_chats">Private chats</string>
    <string name="about">About</string>
    <string name="create_chats">Create chat</string>
    <string name="settings">Settings</string>
    <string name="sign_in_with_google">Sign In with Google</string>
    <string name="home">Home</string>
    <string name="add_member_label">Add chat member</string>
    <string name="choose_the_user">Select available user:</string>
    <string name="invite_friend">Invite a friend</string>
    <string name="all_members_label">Participants</string>
    <string name="err_google_services">Google Play Services error.</string>
    <string name="err_sign_in_google_services">Google Sign In failed.</string>
    <string name="err_making_request">Error while making firebase request</string>
    <string name="err_error_adding_user">Error adding a user</string>
    <string name="err_error_creating_chat">Error creating chat</string>
    <string name="err_auth_err">Authentication failed.</string>
    <string name="msg_invitations_sent">Invitations sent:</string>
    <string name="err_invitations_sending_failed">Failed to send invitation.</string>
    <string name="err_writing_to_db">Unable to write message to database.</string>
    <string name="msg_new_user_added">A new user added</string>
    <string name="msg_user_exists">User already exists</string>
    <string name="err_image_loading">Image upload task was not successful.</string>
    <string name="msg_cannot_send_msg_if_no_signed_in">Sign in if you want to send messages.</string>
    <string name="latest_msg_from">Latest message from %s</string>
    <string name="public_chat">Public</string>
    <string name="private_chat">Private</string>
    <string name="msg_create_chat_chatname">Chat name thet will be displayed</string>
    <string name="msg_create_chat_password">Every user will have to enter this password to enter the chat (Optional)</string>
    <string name="password">Password</string>
    <string name="encription_password">Encription password</string>
    <string name="msg_encription_password">If you set this password, all messages in this chat will be encrypted by it and all members should enter it in option otherwise they will not be able to read messages. If you forget this password you will lose access to messages (Optional)</string>
    <string name="msg_create_chat_private_public">Public chat will be available for every user signed in this application, private chat will be available for you and users who you choose.</string>
    <string name="use_encryption_key">Set encryption password</string>
    <string name="clear_encryption_key">Clear encryption key</string>
    <string name="no_new_events">No new events</string>
    <string name="text_about">This is Android Chat Rooms Application based on Firebase Database with possibility to encrypt messages with a unique key.</string>
    <string name="no_available_settings">No available settings.</string>
</resources>
